# sample-uv-project

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-wheel.yml  ci.yml
doc/: development.md
src/calc/: __init__.py  main.py
tests/: conftest.py  test_calc.py
