[project]
name = "sample-uv-project"
version = "0.1.0"
description = "Command-line calculator tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
lint = ["ruff>=0.18.0", "mypy>=1.8.0"]
security = ["bandit>=1.8.5", "pip-audit>=2.3.0"]
tools = ["codespell>=2.2.0"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
calc = "calc.main:main"
serve = "calc.main:app"

[tool.uvx]
# Enable uvx to run scripts directly from GitHub repositories
# This allows running scripts like `uvx calc` or `uvx serve` directly from the GitHub repository
scripts = [
    "calc",
    "serve",
]

[tool.hatch.build.targets.wheel]
# Explicitly include the package located under src/calc for wheel builds
packages = ["src/calc"]

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sample-uv-project = { workspace = true }

[dependency-groups]
dev = [
    "sample-uv-project",
]
