[project]
name = "sample-uv-project"
version = "0.1.0"
description = "Command-line calculator tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
lint = ["ruff>=0.18.0", "mypy>=1.8.0"]
security = ["bandit>=1.8.5", "pip-audit>=2.3.0"]
tools = ["codespell>=2.2.0"]

[tool.ruff]
line-length = 100
# Ruff common project-wide settings
# - target-version: which Python version Ruff should assume (adjust if needed)
# - select: rule groups to enable (E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings,
#           C90=complexity checks, B=bugbear, I=isort, D=docstring checks)
# - extend-ignore: ignore rules commonly conflicting with some formatter/style choices
# - per-file-ignores: allow specific ignores for files like __init__.py
# - exclude: typical directories to skip
# These are standard sensible defaults; modify as your project's conventions require.
target-version = "py312"
select = ["E", "F", "W", "C90", "B", "I", "D", "PL]
extend-ignore = ["E203"]
per-file-ignores = { "__init__.py" = ["F401"] }
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.13"
strict = true
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydocstyle]
convention = "google"
match-dir = "src"
# ignore = ["D401"]  # 必要ならコメント解除して使えるようにする（ここでは追加のみ）

[project.scripts]
calc = "calc.main:main"
serve = "calc.main:app"

[tool.uvx]
# Enable uvx to run scripts directly from GitHub repositories
# This allows running scripts like `uvx calc` or `uvx serve` directly from the GitHub repository
scripts = [
    "calc",
    "serve",
]

[tool.hatch.build.targets.wheel]
# Explicitly include the package located under src/calc for wheel builds
packages = ["src/calc"]

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sample-uv-project = { workspace = true }

[dependency-groups]
dev = [
    "sample-uv-project",
]
